# libkrossbar

./: CMakeLists.txt  LICENSE  MPack.cmake  README.md  UTHash.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-test.yml
include/: array_writer.h  document.h  document_writer.h  error.h  message.h  message_writer.h  peer.h  transport.h  value.h
performance/: CMakeLists.txt  main  main.cpp  transport_perf_test.cpp  transport_perf_test.h
src/: array_writer.c  document.c  document_writer.c  event_manager.h  message.c  message_writer.c  peer.h  readers_private.h  rpc.c  rpc.h  transport.h  utils.h  writers_private.h
src/shmem/: allocator.c  allocator.h  common.h  event_manager_shm.c  event_manager_shm.h  message_shm.c  message_shm.h  message_writer_shm.c  message_writer_shm.h  transport_shm.c  transport_shm.h
src/uds/: event_manager_uds.c  event_manager_uds.h  message_uds.c  message_uds.h  message_writer_uds.c  message_writer_uds.h  transport_uds.c  transport_uds.h
test/: CMakeLists.txt  main.cpp  test_allocator.cpp  test_event_managers.cpp  test_rpc.cpp  test_shm_event_managers.cpp  test_shm_transport.cpp  test_transport.cpp  test_uds_event_managers.cpp  test_uds_transport.cpp
test/mocks/: transport_mock.cpp  transport_mock.h
